--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ exchanges:
       read_timeout_ms: 30000
       max_message_bytes: 1048576
 
-# Deribit kept at top-level (matches your AppConfig.deribit)
+# Top-level Deribit config (matches AppConfig.deribit)
 deribit:
   ws_url: "wss://www.deribit.com/ws/api/v2"
   books: ["BTC-PERPETUAL", "ETH-PERPETUAL"]
@@ -23,12 +23,18 @@ deribit:
   client_secret: ""
   private: false
 
-# <-- Add this to satisfy AppConfig
+# Top-level Binance config (matches AppConfig.binance)
+binance:
+  ws_url: "wss://stream.binance.com:9443/ws"
+  books: ["btcusdt", "ethusdt", "bnbusdt"]
+  trades: ["btcusdt", "ethusdt", "bnbusdt"]
+
+# You still need this for AppConfig
 combiners: []
 
 mmap:
   path: ./data/global.mm
-  bytes: 1073741824
+  bytes: 1073741824 # 1GB
   mode: ring
   format: bincode
   header:
@@ -64,10 +70,23 @@ catalog:
   sources:
     - { id: 1, name: hyperliquid, network: mainnet }
     - { id: 2, name: deribit, network: mainnet }
+    - { id: 3, name: binance, network: mainnet }
+
   instruments:
+    # Hyperliquid
     - { id: 1001, exchange: hyperliquid, symbol: "@107", channel: book }
     - { id: 1002, exchange: hyperliquid, symbol: "BTC", channel: book }
     - { id: 1003, exchange: hyperliquid, symbol: "HYPE", channel: trades }
+
+    # Deribit
     - { id: 2001, exchange: deribit, symbol: "BTC-PERPETUAL", channel: book }
     - { id: 2002, exchange: deribit, symbol: "ETH-PERPETUAL", channel: book }
     - { id: 2003, exchange: deribit, symbol: "BTC-PERPETUAL", channel: trades }
+
+    # Binance (spot)
+    - { id: 3001, exchange: binance, symbol: "BTCUSDT", channel: book }
+    - { id: 3002, exchange: binance, symbol: "ETHUSDT", channel: book }
+    - { id: 3003, exchange: binance, symbol: "BNBUSDT", channel: book }
+    - { id: 3004, exchange: binance, symbol: "BTCUSDT", channel: trades }
+    - { id: 3005, exchange: binance, symbol: "ETHUSDT", channel: trades }
+    - { id: 3006, exchange: binance, symbol: "BNBUSDT", channel: trades }
